--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,1 +1,2 @@
-• Vi har opdateret kontrolpanelet, der vises under tale- og videoopkald. Hvis du vil gemme dine bedste vittigheder og mest interessante punkter, indtil din yndlingsperson lytter, kan du nu stryge op på kontrolpanelet for at se listen over personer, der er i opkaldet, se, hvem der har løftet hånden, og også udføre andre hurtige handlinger.
+• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
+• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
