--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,2 @@
-• Abbiamo aggiornato il pannello di controllo che appare durante le chiamate vocali e le videochiamate. Da ora ti basterà scorrere in su dal pannello di controllo per eseguire tutta una serie di azioni rapide, come vedere chi ha alzato la mano o controllare che la tua persona preferita sia entrata in chiamata.
+• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
+• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
