--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,1 +1,2 @@
-• Kami mengemas kini panel kawalan yang muncul semasa panggilan suara dan video. Kini anda boleh leret ke atas pada panel kawalan untuk melihat senarai orang yang ada dalam panggilan, yang mengangkat tangan dan melakukan tindakan pantas yang lain.
+• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
+• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
