--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,2 @@
-• Zaktualizowaliśmy panel sterowania pojawiający się podczas połączeń głosowych i wideo. Jeśli chcesz zaczekać z opowiedzeniem najlepszego żartu do momentu, gdy Twoja ulubiona koleżanka dołączy do spotkania, mamy dobrą wiadomość: od teraz po przesunięciu palcem w górę po panelu sterowania wyświetlisz listę osób uczestniczących w spotkaniu i podnoszących rękę, a także wykonasz szybko inne przydatne czynności.
+• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
+• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
