--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,2 @@
-• Мы обновили панель управления, которая появляется во время аудио- и видеозвонков. Если вы хотите сохранить свои лучшие шутки и самые интересные моменты до тех пор, пока ваш любимый человек не будет слушать, теперь вы можете провести пальцем вверх по панели управления, чтобы просмотреть список людей, которые участвуют в звонке, увидеть, кто поднял руку, а также выполнить другие быстрые действия.
+• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
+• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
