--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,1 +1,2 @@
-• Sesli ve görüntülü aramalar sırasında beliren kontrol panelini güncelledik. Böylece aramadaki kişilerin listesini görüntülemek, kimin elini kaldırdığını görmek ve diğer hızlı eylemleri gerçekleştirmek için kontrol panelini yukarı kaydırabilirsin.
+• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
+• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
