--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,1 +1,2 @@
-• 我們更新了語音和視訊通話期間出現的控制面板。現在你可以在控制面板向上滑以檢視通話中的人員名單，查看誰舉了手，並執行其他快速操作。
+• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
+• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
