--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,2 @@
-• قمنا بتحديث لوحة التحكّم التي تظهر خلال المكالمات الصوتية والفيديو. يُمكنك الآن التمرير إلى الأعلى في لوحة التحكّم لعرض قائمة الأشخاص الموجودين في الاتصال، أو رؤية من رفع يده، والقيام بمجموعة إجراءات سريعة أخرى.
+• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
+• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
