--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,2 @@
-• Wir haben die Bedienleiste aktualisiert, die während Sprach- und Videoanrufen angezeigt wird. Du möchtest dir deine Witze und Geschichten für deine guten Freunde aufsparen? Auf der Bedienleiste kannst du jetzt nach oben wischen, um zu sehen, wer am Anruf teilnimmt oder die Hand hebt und welche anderen Schnellaktionen sich ausführen lassen.
+• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
+• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
