--- a/fastlane/metadata/es-ES/release_notes.txt
+++ b/fastlane/metadata/es-ES/release_notes.txt
@@ -1,1 +1,2 @@
-• Actualizamos el panel de control que aparece durante las llamadas de voz y videollamadas. Si quieres guardar tus mejores chistes y opiniones más interesantes hasta que tu persona favorita esté escuchando, ahora puedes deslizar el dedo hacia arriba en el panel de control para ver la lista de personas que están en la llamada, ver quién ha levantado la mano y realizar otras acciones rápidas.
+• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
+• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
