--- a/fastlane/metadata/fr-FR/release_notes.txt
+++ b/fastlane/metadata/fr-FR/release_notes.txt
@@ -1,1 +1,2 @@
-• Le panneau de commande qui s’affiche lors des appels vocaux et vidéo a de nouveaux tours dans son sac. Chercher désespérément vos parents dans le public pendant les spectacles scolaires vous a traumatisé ? Cette fonctionnalité va vous rassurer : il suffit maintenant de balayer le panneau de commande vers le haut pour afficher la liste des participants, voir ceux qui ont levé la main et effectuer d’autres actions rapides.
+• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
+• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
