--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,1 +1,2 @@
-• Ažurirali smo upravljačku ploču koja se pojavljuje tijekom glasovnih poziva i videopoziva. Sada možete prijeći prstom prema gore na upravljačkoj ploči da biste vidjeli popis osoba prisutnih u pozivu, saznali tko je podigao ruku ili izvršili slične brze radnje.
+• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
+• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
