--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,2 @@
-• We hebben het bedieningspaneel dat tijdens spraak- en video-oproepen verschijnt aangepast. Je kunt nu omhoog vegen in het bedieningspaneel om de lijst met gespreksdeelnemers te bekijken, te zien wie zijn hand heeft opgestoken en andere snelle acties uit te voeren.
+• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
+• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
