--- a/fastlane/metadata/no/release_notes.txt
+++ b/fastlane/metadata/no/release_notes.txt
@@ -1,1 +1,2 @@
-• Vi har gjort endringer i kontrollpanelet som dukker opp under lyd- og videosamtaler. Nå kan du sveipe kontrollpanelet opp for å se hvem som er med i samtalen, hvem som har rukket opp hånden og utføre andre handlinger kjapt og enkelt.
+• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
+• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
