--- a/fastlane/metadata/pt-PT/release_notes.txt
+++ b/fastlane/metadata/pt-PT/release_notes.txt
@@ -1,1 +1,2 @@
-• Atualizámos o painel de controlo que aparece durante as chamadas de voz e vídeo. Agora pode deslizar para cima no painel de controlo para ver a lista de pessoas que estão na chamada, ver quem levantou a mão e realizar outras ações rápidas.
+• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
+• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
