--- a/fastlane/metadata/sk/release_notes.txt
+++ b/fastlane/metadata/sk/release_notes.txt
@@ -1,1 +1,2 @@
-• Aktualizovali sme ovládací panel, ktorý sa zobrazuje počas hlasových hovorov a videohovorov. Teraz môžete potiahnutím nahor po ovládacom paneli zobraziť zoznam ľudí, ktorí sa zúčastňujú hovoru, zistiť, kto zdvihol ruku, a vykonať ďalšie rýchle akcie.
+• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
+• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
